// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TechnologiesListComponent should create empty 1`] = `
<rc-technologies-list>
  <rc-list
    class="rc-horizontal"
    horizontal=""
    role="list"
  >
    <rc-list-title
      class="rc-list-title"
    >
      technologies
    </rc-list-title>
    <span
      class="rc-list-items-wrapper"
    >
      
    </span>
  </rc-list>
</rc-technologies-list>
`;

exports[`TechnologiesListComponent should create with technos 1`] = `
<rc-technologies-list>
  <rc-list
    class="rc-horizontal"
    horizontal=""
    role="list"
  >
    <rc-list-title
      class="rc-list-title"
    >
      technologies
    </rc-list-title>
    <span
      class="rc-list-items-wrapper"
    >
      <rc-list-item
        class="rc-list-item"
        role="list-item"
      >
        Angular
      </rc-list-item>
      <rc-list-item
        class="rc-list-item"
        role="list-item"
      >
        Jest
      </rc-list-item>
      
    </span>
  </rc-list>
</rc-technologies-list>
`;
